--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "type": "module",
+  "scripts": {
+    "format": "prettier --write *.js **/*.js"
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
